2008-11-03  Mikael Pettersson  <mikpe@it.uu.se>

PR target/37989
	* config/i386/mingw32.h (REAL_LIBGCC_SPEC): Only add libgcc_s.a
	or libgcc_eh.a to spec if ENABLE_SHARED_LIBGCC.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141575 138bc75d-0d04-0410-961f-82ee72b054a4