gcc/config/i386/mingw32.h
@@ -89,11 +89,15 @@ along with GCC; see the file COPYING3.  If not see
   %(shared_libgcc_undefs)"
 
 /* Include in the mingw32 libraries with libgcc */
+#ifdef ENABLE_SHARED_LIBGCC
+#define SHARED_LIBGCC_SPEC "%{shared-libgcc:-lgcc_s} %{!shared-libgcc:-lgcc_eh}"
+#else
+#define SHARED_LIBGCC_SPEC /*empty*/
+#endif
 #undef REAL_LIBGCC_SPEC
 #define REAL_LIBGCC_SPEC \
   "%{mthreads:-lmingwthrd} -lmingw32 \
-   %{shared-libgcc:-lgcc_s} \
-   %{!shared-libgcc:-lgcc_eh} \
+   "SHARED_LIBGCC_SPEC" \
    -lgcc \
    -lmoldname -lmingwex -lmsvcrt"
 
